crates/tmark-writers/tests/snapshots/fixtures__blockquote-attributes@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\tsepigraph{Simplicity is prerequisite for reliability.}

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
