crates/tmark-writers/tests/snapshots/fixtures__blockquote-attributes@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-epigraph[Simplicity is prerequisite for reliability.]

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
