crates/tmark-writers/tests/snapshots/fixtures__caption-table@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#figure(
  table(
    columns: (1fr, 1fr,),
    align: (left, left,),
    table.header([A], [B]),
    [1], [2],
  ),
  caption: [Stock.],
) <tbl:stock>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
