crates/tmark-writers/tests/snapshots/fixtures__container-admonition-after-list@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<ul>
<li><input type="checkbox" disabled checked /> Vrai</li>
</ul>
<div class="admonition note">
<p class="admonition-title">Note</p>
<p>Corps.</p>
</div>
<p>Fin.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
