crates/tmark-writers/tests/snapshots/fixtures__container-admonition-after-list@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
- #ts-task("done")[Vrai]

#ts-callout(kind: "note")[
Corps.
]

Fin.

---requires---
{
  "packages": [
    "amssymb",
    "enumitem",
    "pifont",
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-callouts",
    "ts-todolist"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
