crates/tmark-writers/tests/snapshots/fixtures__container-admonition-attributes@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<div class="admonition note">
<p class="admonition-title">Note</p>
<p>Corps.</p>
</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
