crates/tmark-writers/tests/snapshots/fixtures__container-admonition-attributes@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-callout(kind: "note", lines: 5)[
Corps.
]

---requires---
{
  "packages": [
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-callouts"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
